--- a/games.html
+++ b/games.html
@@ -9,7 +9,7 @@
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
     ></script>
-    <title>BadasdFrame</title>
+    <title>BadFrame</title>
   </head>
   <body>
     <header>
