changed folder structure

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -27,7 +27,9 @@
       <button type="button">sign in</button>
     </header>
     <main>
-      <h1>Bad<span class="emphasis">Frame</span> Games</h1>
+      <article>
+        <h1>Bad<span class="emphasis">Frame</span> Games</h1>
+      </article>
     </main>
     <footer>
       <h2>This is our logo:</h2>
