--- a/games.html
+++ b/games.html
@@ -14,8 +14,8 @@
   <body>
     <header>
       <a href="index.html"
-        ><i class="fa-solid fa-gamepad logo" alt="BadFrame"></i
-      ></a>
+        ><i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
+      </a>
       <nav>
         <ul class="nav-links">
           <li><a href="games.html">games</a></li>
