--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><i class="fa-solid fa-gamepad logo" alt="BadFrame"></i
-      ></a>
+      <a href="index.html">
+        <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
+      </a>
       <nav>
         <ul class="nav-links">
           <li><a href="games.html">games</a></li>
