started work on showcase

--- a/games.html
+++ b/games.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -13,22 +13,27 @@
   </head>
   <body>
     <header>
-      <a href="index.html"
-        ><i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
-      </a>
+      <!-- nav links -->
       <nav>
+        <!-- logo -->
+        <a href="index.html">
+          <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
+        </a>
         <ul class="nav-links">
           <li><a href="games.html">games</a></li>
           <li><a href="store.html">store</a></li>
           <li><a href="contact.html">contact</a></li>
           <li><a href="about.html">about</a></li>
         </ul>
+        <!-- sign in  -->
+        <button type="button">sign in</button>
       </nav>
-      <button type="button">sign in</button>
+
+      <section id="showcase">
+        <h1>Bad<span class="emphasis">Frame</span> Games</h1>
+      </section>
     </header>
-    <main>
-      <h1>Bad<span class="emphasis">Frame</span> Games</h1>
-    </main>
+    <main></main>
     <footer>
       <h2>This is our logo:</h2>
       <p>this is our description</p>
