--- a/index.html
+++ b/index.html
@@ -13,23 +13,99 @@
   </head>
   <body>
     <header>
-      <a href="index.html">
-        <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
-      </a>
+      <!-- nav links -->
       <nav>
+        <!-- logo -->
+        <a href="index.html">
+          <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
+        </a>
         <ul class="nav-links">
           <li><a href="games.html">games</a></li>
           <li><a href="store.html">store</a></li>
           <li><a href="contact.html">contact</a></li>
           <li><a href="about.html">about</a></li>
         </ul>
+        <!-- sign in  -->
+        <button type="button">sign in</button>
       </nav>
-      <button type="button">sign in</button>
+
+      <section id="showcase">
+        <h1>Bad<span class="emphasis">Frame</span> Games</h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+          vel maxime eveniet tempore omnis mollitia quod asperiores consequatur
+          molestiae quaerat atque quis nesciunt fuga fugit ratione veniam
+          suscipit, iure non!
+        </p>
+        <a href="./store.html"
+          ><button style="min-width: 150px">SHOP</button></a
+        >
+      </section>
     </header>
     <main>
-      <article>
-        <h1>Bad<span class="emphasis">Frame</span> Games</h1>
-      </article>
+      <section id="section-a">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex eum
+          veritatis assumenda facilis neque id. Itaque, ipsum! Aperiam,
+          veritatis. Fuga asperiores nisi quibusdam in possimus quisquam ipsam
+          ducimus rem maiores est nam sequi modi ex harum neque, quas pariatur
+          itaque id nostrum soluta nemo! Cumque doloribus rerum soluta debitis
+          quas ducimus error earum quia voluptas iste natus illum fuga molestias
+          ipsa adipisci alias necessitatibus hic eum, qui sunt architecto
+          aperiam fugiat minima omnis! Esse veritatis adipisci quaerat maxime
+          quisquam, facilis accusantium officia at commodi eius, aliquam itaque
+          sit est. Quas reiciendis tenetur vitae, quia iure possimus qui
+          quibusdam fugit ipsa.
+        </p>
+      </section>
+      <section id="section-b">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex eum
+          veritatis assumenda facilis neque id. Itaque, ipsum! Aperiam,
+          veritatis. Fuga asperiores nisi quibusdam in possimus quisquam ipsam
+          ducimus rem maiores est nam sequi modi ex harum neque, quas pariatur
+          itaque id nostrum soluta nemo! Cumque doloribus rerum soluta debitis
+          quas ducimus error earum quia voluptas iste natus illum fuga molestias
+          ipsa adipisci alias necessitatibus hic eum, qui sunt architecto
+          aperiam fugiat minima omnis! Esse veritatis adipisci quaerat maxime
+          quisquam, facilis accusantium officia at commodi eius, aliquam itaque
+          sit est. Quas reiciendis tenetur vitae, quia iure possimus qui
+          quibusdam fugit ipsa.
+        </p>
+      </section>
+      <section id="section-c">
+        <div class="box-1">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Repellendus esse neque libero nemo consequuntur magnam autem
+            voluptatem ratione ad. Culpa deserunt aperiam ducimus esse fugiat
+            numquam neque reprehenderit quo repellendus error odio nemo eveniet,
+            cumque quis modi nostrum facere ipsam vitae? Quas cupiditate
+            accusamus debitis distinctio nihil facilis soluta quam.
+          </p>
+        </div>
+        <div class="box-2">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Repellendus esse neque libero nemo consequuntur magnam autem
+            voluptatem ratione ad. Culpa deserunt aperiam ducimus esse fugiat
+            numquam neque reprehenderit quo repellendus error odio nemo eveniet,
+            cumque quis modi nostrum facere ipsam vitae? Quas cupiditate
+            accusamus debitis distinctio nihil facilis soluta quam.
+          </p>
+        </div>
+
+        <div class="box-3">
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Repellendus esse neque libero nemo consequuntur magnam autem
+            voluptatem ratione ad. Culpa deserunt aperiam ducimus esse fugiat
+            numquam neque reprehenderit quo repellendus error odio nemo eveniet,
+            cumque quis modi nostrum facere ipsam vitae? Quas cupiditate
+            accusamus debitis distinctio nihil facilis soluta quam.
+          </p>
+        </div>
+      </section>
     </main>
     <footer>
       <h2>This is our logo:</h2>
