started showcase carousel setup

--- a/index.html
+++ b/index.html
@@ -30,16 +30,32 @@
       </nav>
 
       <section id="showcase">
-        <h1>Bad<span class="emphasis">Frame</span> Games</h1>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-          vel maxime eveniet tempore omnis mollitia quod asperiores consequatur
-          molestiae quaerat atque quis nesciunt fuga fugit ratione veniam
-          suscipit, iure non!
-        </p>
-        <a href="./store.html"
-          ><button style="min-width: 150px">SHOP</button></a
-        >
+        <div class="introduction">
+          <h1>
+            Bad
+            <span class="emphasis">Frame</span>
+            Games
+          </h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+            vel maxime eveniet tempore omnis mollitia quod asperiores
+            consequatur molestiae quaerat atque quis nesciunt fuga fugit ratione
+            veniam suscipit, iure non!
+          </p>
+          <a href="./store.html">
+            <button style="min-width: 150px">SHOP</button>
+          </a>
+        </div>
+
+        <div class="carousel">
+          <div class="slider">
+            <div class="slide">Content 1</div>
+            <div class="slide">Content 2</div>
+            <div class="slide">Content 3</div>
+            <div class="slide">Content 4</div>
+            <div class="slide">Content 5</div>
+          </div>
+        </div>
       </section>
     </header>
     <main>
