--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style/style.css" />
+
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -30,7 +31,7 @@
       </nav>
 
       <section id="showcase">
-        <div class="introduction">
+        <!-- <div class="introduction">
           <h1>
             Bad
             <span class="emphasis">Frame</span>
@@ -45,15 +46,20 @@
           <a href="./store.html">
             <button style="min-width: 150px">SHOP</button>
           </a>
-        </div>
-
-        <div class="carousel">
-          <div class="slider">
-            <div class="slide">Content 1</div>
-            <div class="slide">Content 2</div>
-            <div class="slide">Content 3</div>
-            <div class="slide">Content 4</div>
-            <div class="slide">Content 5</div>
+        </div> -->
+        <div class="container">
+          <div class="carousel">
+            <div class="slider">
+              <div class="slide">Content 1</div>
+              <div class="slide">Content 2</div>
+              <div class="slide">Content 3</div>
+              <div class="slide">Content 4</div>
+              <div class="slide">Content 5</div>
+            </div>
+            <div class="controls">
+              <span class="arrow left">left</span>
+              <span class="arrow right">right</span>
+            </div>
           </div>
         </div>
       </section>
@@ -134,5 +140,6 @@
         <li><a href="contact.html">contact</a></li>
       </ul>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
