--- a/index copy.html
+++ b/index copy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/stylesORG.css" />
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -46,10 +46,28 @@
             <button style="min-width: 150px">SHOP</button>
           </a>
         </div> -->
-        <article data-index="0" data-status="active"></article>
-        <article data-index="0" data-status="active"></article>
-        <article data-index="0" data-status="active"></article>
-        <article data-index="0" data-status="active"></article>
+        <article class="article-slide" data-index="0" data-status="active">
+          <h1>
+            Bad
+            <span class="emphasis">Frame</span>
+            Games
+          </h1>
+        </article>
+        <article
+          class="article-slide"
+          data-index="0"
+          data-status="active"
+        ></article>
+        <article
+          class="article-slide"
+          data-index="0"
+          data-status="active"
+        ></article>
+        <article
+          class="article-slide"
+          data-index="0"
+          data-status="active"
+        ></article>
       </section>
     </header>
     <main>
