--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/stylesORG.css" />
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -30,7 +30,7 @@
       </nav>
 
       <section id="showcase">
-        <!-- <div class="introduction">
+        <div class="introduction">
           <h1>
             Bad
             <span class="emphasis">Frame</span>
@@ -43,91 +43,13 @@
             veniam suscipit, iure non!
           </p>
           <a href="./store.html">
-            <button style="min-width: 150px">SHOP</button>
+            <button style="min-width: 150px" class="shop-button">SHOP</button>
           </a>
-        </div> -->
-        <article data-index="0" data-status="active"></article>
-        <article data-index="0" data-status="active"></article>
-        <article data-index="0" data-status="active"></article>
-        <article data-index="0" data-status="active"></article>
+        </div>
       </section>
     </header>
-    <main>
-      <section id="section-a">
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex eum
-          veritatis assumenda facilis neque id. Itaque, ipsum! Aperiam,
-          veritatis. Fuga asperiores nisi quibusdam in possimus quisquam ipsam
-          ducimus rem maiores est nam sequi modi ex harum neque, quas pariatur
-          itaque id nostrum soluta nemo! Cumque doloribus rerum soluta debitis
-          quas ducimus error earum quia voluptas iste natus illum fuga molestias
-          ipsa adipisci alias necessitatibus hic eum, qui sunt architecto
-          aperiam fugiat minima omnis! Esse veritatis adipisci quaerat maxime
-          quisquam, facilis accusantium officia at commodi eius, aliquam itaque
-          sit est. Quas reiciendis tenetur vitae, quia iure possimus qui
-          quibusdam fugit ipsa.
-        </p>
-      </section>
-      <section id="section-b">
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex eum
-          veritatis assumenda facilis neque id. Itaque, ipsum! Aperiam,
-          veritatis. Fuga asperiores nisi quibusdam in possimus quisquam ipsam
-          ducimus rem maiores est nam sequi modi ex harum neque, quas pariatur
-          itaque id nostrum soluta nemo! Cumque doloribus rerum soluta debitis
-          quas ducimus error earum quia voluptas iste natus illum fuga molestias
-          ipsa adipisci alias necessitatibus hic eum, qui sunt architecto
-          aperiam fugiat minima omnis! Esse veritatis adipisci quaerat maxime
-          quisquam, facilis accusantium officia at commodi eius, aliquam itaque
-          sit est. Quas reiciendis tenetur vitae, quia iure possimus qui
-          quibusdam fugit ipsa.
-        </p>
-      </section>
-      <section id="section-c">
-        <div class="box-1">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Repellendus esse neque libero nemo consequuntur magnam autem
-            voluptatem ratione ad. Culpa deserunt aperiam ducimus esse fugiat
-            numquam neque reprehenderit quo repellendus error odio nemo eveniet,
-            cumque quis modi nostrum facere ipsam vitae? Quas cupiditate
-            accusamus debitis distinctio nihil facilis soluta quam.
-          </p>
-        </div>
-        <div class="box-2">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Repellendus esse neque libero nemo consequuntur magnam autem
-            voluptatem ratione ad. Culpa deserunt aperiam ducimus esse fugiat
-            numquam neque reprehenderit quo repellendus error odio nemo eveniet,
-            cumque quis modi nostrum facere ipsam vitae? Quas cupiditate
-            accusamus debitis distinctio nihil facilis soluta quam.
-          </p>
-        </div>
-
-        <div class="box-3">
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-            Repellendus esse neque libero nemo consequuntur magnam autem
-            voluptatem ratione ad. Culpa deserunt aperiam ducimus esse fugiat
-            numquam neque reprehenderit quo repellendus error odio nemo eveniet,
-            cumque quis modi nostrum facere ipsam vitae? Quas cupiditate
-            accusamus debitis distinctio nihil facilis soluta quam.
-          </p>
-        </div>
-      </section>
-    </main>
-    <footer>
-      <h2>This is our logo:</h2>
-      <p>this is our description</p>
-
-      <ul>
-        <li><a href="about.html">about</a></li>
-        <li><a href="games.html">games</a></li>
-        <li><a href="store.html">store</a></li>
-        <li><a href="contact.html">contact</a></li>
-      </ul>
-    </footer>
+    <main></main>
+    <footer></footer>
     <script src="./script.js"></script>
   </body>
 </html>
