--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style/stylesORG.css" />
+    <link rel="stylesheet" href="./style/styles.css" />
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -14,38 +14,36 @@
   <body>
     <header>
       <!-- nav links -->
-      <nav>
+      <nav class="nav">
         <!-- logo -->
-        <a href="index.html">
+        <a href="./index.html" class="nav-item">
           <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
         </a>
-        <ul class="nav-links">
-          <li><a href="games.html">games</a></li>
-          <li><a href="store.html">store</a></li>
-          <li><a href="contact.html">contact</a></li>
-          <li><a href="about.html">about</a></li>
+        <ul class="nav-links nav-item">
+          <li><a href="./pages/games.html">games</a></li>
+          <li><a href="./pages/store.html">store</a></li>
+          <li><a href="./pages/contact.html">contact</a></li>
+          <li><a href="./pages/about.html">about</a></li>
         </ul>
         <!-- sign in  -->
-        <button type="button" class="shop-button">sign in</button>
+        <button type="button" class="shop-button nav-item">sign in</button>
       </nav>
 
       <section id="showcase">
-        <div class="introduction">
-          <h1>
-            Bad
-            <span class="emphasis">Frame</span>
-            Games
-          </h1>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
-            vel maxime eveniet tempore omnis mollitia quod asperiores
-            consequatur molestiae quaerat atque quis nesciunt fuga fugit ratione
-            veniam suscipit, iure non!
-          </p>
-          <a href="./store.html">
-            <button style="min-width: 150px" class="shop-button">SHOP</button>
-          </a>
-        </div>
+        <h1>
+          Bad
+          <span class="emphasis">Frame</span>
+          Games
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+          vel maxime eveniet tempore omnis mollitia quod asperiores consequatur
+          molestiae quaerat atque quis nesciunt fuga fugit ratione veniam
+          suscipit, iure non!
+        </p>
+        <a href="./store.html">
+          <button style="min-width: 150px" class="shop-button">SHOP</button>
+        </a>
       </section>
     </header>
     <main></main>
