--- a/pages/store.html
+++ b/pages/store.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style/styles.css" />
     <script
       src="https://kit.fontawesome.com/ee8cc52b8a.js"
       crossorigin="anonymous"
@@ -12,19 +12,42 @@
     <title>BadFrame</title>
   </head>
   <body>
-    <div class="web-top">
-      <nav>
-        <ul>
-          <li class="logo">
-            <i class="fa-solid fa-gamepad" alt="BadFrame"></i>
-          </li>
-          <li><a href="about.html">about</a></li>
-          <li><a href="games.html">games</a></li>
-          <li><a href="store.html">store</a></li>
-          <li><a href="contact.html">contact</a></li>
+    <header>
+      <!-- nav links -->
+      <nav class="nav">
+        <!-- logo -->
+        <a href="index.html" class="nav-item">
+          <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
+        </a>
+        <ul class="nav-links nav-item">
+          <li><a href="./pages/games.html">games</a></li>
+          <li><a href="./pages/store.html">store</a></li>
+          <li><a href="./pages/contact.html">contact</a></li>
+          <li><a href="./pages/about.html">about</a></li>
         </ul>
-        <button type="button">sign in</button>
+        <!-- sign in  -->
+        <button type="button" class="shop-button nav-item">sign in</button>
       </nav>
-    </div>
+
+      <section id="showcase">
+        <h1>
+          Bad
+          <span class="emphasis">Frame</span>
+          Games
+        </h1>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis
+          vel maxime eveniet tempore omnis mollitia quod asperiores consequatur
+          molestiae quaerat atque quis nesciunt fuga fugit ratione veniam
+          suscipit, iure non!
+        </p>
+        <a href="./store.html">
+          <button style="min-width: 150px" class="shop-button">SHOP</button>
+        </a>
+      </section>
+    </header>
+    <main></main>
+    <footer></footer>
+    <script src="./script.js"></script>
   </body>
 </html>
