started on breakpoints - mobile

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <!-- nav links -->
       <nav class="nav">
         <!-- logo -->
-        <a href="./index.html" class="nav-item">
+        <a href="./index.html" class="nav-item nav-logo">
           <i class="fa-solid fa-gamepad logo" alt="BadFrame"></i>
         </a>
-        <ul class="nav-links nav-item">
+        <ul class="nav-item nav-links">
           <li><a href="./pages/games.html">games</a></li>
           <li><a href="./pages/store.html">store</a></li>
           <li><a href="./pages/contact.html">contact</a></li>
