header+main setup done

--- a/index.html
+++ b/index.html
@@ -56,22 +56,28 @@
           <!-- sign in  -->
           <!-- <button type="button" class="shop-button nav-item">sign in</button> -->
         </nav>
-      </div>
-
-      <div id="hero">
-        <h1>
-          Bad
-          <span class="emphasis">Frame</span>
-          Games
-        </h1>
-        <p>WORK, PLAY, GAME.</p>
-        <!-- <a href="./store.html">
-          <button style="min-width: 150px" class="shop-button">SHOP</button>
-        </a> -->
+        <div class="header-text">
+          <h1 class="header-main-text">
+            Bad
+            <span class="emphasis">Frame</span><br />
+            Games
+          </h1>
+          <p class="header-text-small">WORK, PLAY, GAME.</p>
+        </div>
       </div>
     </header>
-    <main></main>
+    <main>
+      <div class="main-container">
+        <div class="main-article">
+          <div class="main-article-body">
+            <div class="main-article-item"></div>
+            <div class="main-article-item"></div>
+            <div class="main-article-item"></div>
+            <div class="main-article-item"></div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
-    <script src="./script.js"></script>
   </body>
 </html>
