--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
   <body>
     <header>
       <div class="header-container">
-        <!-- logo -->
-        <!-- nav links -->
         <nav class="header-nav">
+          <!-- logo -->
           <div class="header-left">
             <img src="./img/LOGOpng.png" class="nav-logo" />
           </div>
+          <!-- nav links -->
+          <!-- HAMBURGER: -->
+          <!-- <i class="fa-solid fa-bars"></i> -->
           <div class="header-right">
             <ul class="nav-list">
               <li>
@@ -53,8 +55,7 @@
             </ul>
           </div>
 
-          <!-- sign in  -->
-          <!-- <button type="button" class="shop-button nav-item">sign in</button> -->
+
         </nav>
         <div class="header-text">
           <h1 class="header-main-text">
@@ -70,7 +71,12 @@
       <div class="main-container">
         <div class="main-article">
           <div class="main-article-body">
-            <div class="main-article-item"></div>
+            <div class="main-article-item">
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Voluptatem esse natus ex nihil. 
+                Ad illum placeat eius harum modi sunt cum architecto voluptates molestiae 
+                tempora nobis provident culpa nesciunt, autem esse non illo soluta atque. Atque veritatis nam recusandae aliquam enim, odit quis. Quidem odio excepturi illo nemo, praesentium temporibus.</p>
+            </div>
             <div class="main-article-item"></div>
             <div class="main-article-item"></div>
             <div class="main-article-item"></div>
