hanmburger icon added

--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
           </div>
           <!-- nav links -->
           <!-- HAMBURGER: -->
-          <!-- <i class="fa-solid fa-bars"></i> -->
+          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa-solid fa-bars hamburger"> </i>
+          </a>
           <div class="header-right">
             <ul class="nav-list">
               <li>
@@ -54,11 +56,9 @@
               </li>
             </ul>
           </div>
-
-
         </nav>
-        <div class="header-text">
-          <h1 class="header-main-text">
+        <div class="header-text-wrapper">
+          <h1 class="header-text-main">
             Bad
             <span class="emphasis">Frame</span><br />
             Games
@@ -72,10 +72,14 @@
         <div class="main-article">
           <div class="main-article-body">
             <div class="main-article-item">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Voluptatem esse natus ex nihil. 
-                Ad illum placeat eius harum modi sunt cum architecto voluptates molestiae 
-                tempora nobis provident culpa nesciunt, autem esse non illo soluta atque. Atque veritatis nam recusandae aliquam enim, odit quis. Quidem odio excepturi illo nemo, praesentium temporibus.</p>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem esse natus ex nihil. Ad illum placeat eius harum modi
+                sunt cum architecto voluptates molestiae tempora nobis provident
+                culpa nesciunt, autem esse non illo soluta atque. Atque
+                veritatis nam recusandae aliquam enim, odit quis. Quidem odio
+                excepturi illo nemo, praesentium temporibus.
+              </p>
             </div>
             <div class="main-article-item"></div>
             <div class="main-article-item"></div>
