hamburger menu added

--- a/index.html
+++ b/index.html
@@ -14,77 +14,76 @@
     <title>BadFrame</title>
   </head>
   <body>
-    <header>
-      <div class="header-container">
-        <nav class="header-nav">
-          <!-- logo -->
-          <div class="header-left">
-            <img src="./img/LOGOpng.png" class="nav-logo" />
-          </div>
-          <!-- nav links -->
-          <!-- HAMBURGER: -->
-          <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-            <i class="fa-solid fa-bars hamburger"> </i>
-          </a>
-          <div class="header-right">
-            <ul class="nav-list">
-              <li>
-                <a
-                  class="nav-link"
-                  aria-label="About us"
-                  href="./pages/about.html"
-                  >ABOUT US</a
-                >
-              </li>
-              <li>
-                <a class="nav-link" aria-label="Games" href="./pages/games.html"
-                  >GAMES</a
-                >
-              </li>
-              <li>
-                <a
-                  class="nav-link"
-                  aria-label="Account"
-                  href="./pages/account.html"
-                  >ACCOUNT</a
-                >
-              </li>
-              <li>
-                <a class="nav-link" aria-label="News" href="./pages/news.html"
-                  >NEWS</a
-                >
-              </li>
-            </ul>
-          </div>
-        </nav>
-        <div class="header-text-wrapper">
-          <h1 class="header-text-main">
-            Bad
-            <span class="emphasis">Frame</span><br />
-            Games
-          </h1>
-          <p class="header-text-small">WORK, PLAY, GAME.</p>
+    <header class="header-container">
+      <nav class="header-nav">
+        <!-- logo -->
+        <div class="header-left">
+          <img src="./img/LOGOpng.png" class="nav-logo" />
         </div>
+        <!-- nav links -->
+        <!-- HAMBURGER: -->
+        <a href="hamburger.html" class="icon" onclick="myFunction()">
+          <i class="fa-solid fa-bars hamburger"> </i>
+        </a>
+        <div class="header-right">
+          <ul class="nav-list">
+            <li>
+              <a
+                class="nav-link"
+                aria-label="About us"
+                href="./pages/about.html"
+                >ABOUT US</a
+              >
+            </li>
+            <li>
+              <a class="nav-link" aria-label="Games" href="./pages/games.html"
+                >GAMES</a
+              >
+            </li>
+            <li>
+              <a
+                class="nav-link"
+                aria-label="Account"
+                href="./pages/account.html"
+                >ACCOUNT</a
+              >
+            </li>
+            <li>
+              <a class="nav-link" aria-label="News" href="./pages/news.html"
+                >NEWS</a
+              >
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <div class="header-text-wrapper">
+        <h1 class="header-text-main">
+          Bad
+          <span class="emphasis">Frame</span><br />
+          Games
+        </h1>
+        <p class="header-text-small">WORK, PLAY, GAME.</p>
+      </div>
+      <div class="hamburger-menu-wrapper">
+        <ul class="hamburger-menu">
+          <a href=""><li class="hamburger-list-item">ABOUT US</li></a>
+          <a href=""><li class="hamburger-list-item">GAMES</li></a>
+          <a href=""><li class="hamburger-list-item">ACCOUNT</li></a>
+          <a href=""><li class="hamburger-list-item">NEWS</li></a>
+          <a class="hamburger-list-item" href="index.html"
+            ><li><i class="hamburger-x-button fa-solid fa-x"> </i></li
+          ></a>
+        </ul>
       </div>
     </header>
-    <main>
-      <div class="main-container">
-        <div class="main-article">
-          <div class="main-article-body">
-            <div class="main-article-item">
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatem esse natus ex nihil. Ad illum placeat eius harum modi
-                sunt cum architecto voluptates molestiae tempora nobis provident
-                culpa nesciunt, autem esse non illo soluta atque. Atque
-                veritatis nam recusandae aliquam enim, odit quis. Quidem odio
-                excepturi illo nemo, praesentium temporibus.
-              </p>
-            </div>
-            <div class="main-article-item"></div>
-            <div class="main-article-item"></div>
-            <div class="main-article-item"></div>
-          </div>
+    <main class="main-container">
+      <div class="main-article">
+        <div class="main-article-body">
+          <div class="main-article-item"></div>
+          <div class="main-article-item"></div>
+          <div class="main-article-item"></div>
+          <div class="main-article-item"></div>
+          <div class="main-article-item"></div>
         </div>
       </div>
     </main>
