arcticles, structure and button  placeholders done

--- a/index.html
+++ b/index.html
@@ -79,11 +79,24 @@
     <main class="main-container">
       <div class="main-article">
         <div class="main-article-body">
-          <div class="main-article-item"></div>
-          <div class="main-article-item"></div>
-          <div class="main-article-item"></div>
-          <div class="main-article-item"></div>
-          <div class="main-article-item"></div>
+          <div class="main-article-item item1"></div>
+          <div class="main-article-item item2"></div>
+          <div class="main-article-item item3"></div>
+          <div class="main-article-item item4"></div>
+          <div class="main-article-item item5"></div>
+        </div>
+      </div>
+      <div class="button-container">
+        <button class="button news-button">VIEW ALL NEWS</button>
+      </div>
+      <div class="bottom-article">
+        <div class="text-container">
+          <h1 class="hero-heading">LOVE WHERE<br />YOU WORK</h1>
+          <p class="header-text-small">WE'VE GOT A PLACE FOR YOU</p>
+        </div>
+
+        <div class="button-container">
+          <button class="button positions-button">POSITIONS</button>
         </div>
       </div>
     </main>
