--- a/index.html
+++ b/index.html
@@ -104,7 +104,26 @@
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer class="footer">
+      <div class="footer-logo-container">
+        <img src="img/oldLogo/newLogo.png" alt="Logo of Bad Frame Games." />
+      </div>
+      <ul class="footer-nav-list">
+        <li class="footer-nav-list-item">ABOUT US</li>
+        <li class="footer-nav-list-item">GAMES</li>
+        <li class="footer-nav-list-item">CAREERS</li>
+        <li class="footer-nav-list-item">NEWS</li>
+        <li class="footer-nav-list-item">CONTACT US</li>
+      </ul>
+      <div class="footer-text-container">
+        <p class="footer-text">
+          &copy; BAD FRAME GAMES Ltd. ALL RIGHTS RESERVED
+        </p>
+        <p class="footer-links">
+          &copy; BAD FRAME GAMES Ltd. ALL RIGHTS RESERVED
+        </p>
+      </div>
+    </footer>
   </body>
   <script>
     document.getElementById("menu-icon").addEventListener("click", function () {
