--- a/index.html
+++ b/index.html
@@ -106,7 +106,11 @@
     </main>
     <footer class="footer">
       <div class="footer-logo-container">
-        <img src="img/oldLogo/newLogo.png" alt="Logo of Bad Frame Games." />
+        <img
+          class="footer-logo"
+          src="img/oldLogo/newLogo.png"
+          alt="Logo of Bad Frame Games."
+        />
       </div>
       <ul class="footer-nav-list">
         <li class="footer-nav-list-item">ABOUT US</li>
@@ -125,19 +129,5 @@
       </div>
     </footer>
   </body>
-  <script>
-    document.getElementById("menu-icon").addEventListener("click", function () {
-      document
-        .querySelector(".hamburger-menu-wrapper")
-        .classList.add("show-menu");
-    });
-
-    document
-      .querySelector(".hamburger-x-button")
-      .addEventListener("click", function () {
-        document
-          .querySelector(".hamburger-menu-wrapper")
-          .classList.remove("show-menu");
-      });
-  </script>
+  <script src="./script/script.js"></script>
 </html>
