mobile-deleted footer logo

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
     </main>
     <footer class="footer">
       <div class="footer-logo-container">
-        <img
+        <!-- <img
           class="footer-logo"
           src="img/oldLogo/newLogo.png"
           alt="Logo of Bad Frame Games."
-        />
+        /> -->
       </div>
       <ul class="footer-nav-list">
         <li class="footer-nav-list-item">ABOUT US</li>
