--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <!-- nav links -->
         <!-- HAMBURGER: -->
-        <a class="icon" onclick="myFunction()">
+        <a class="icon" onclick="openHamburger()">
           <i class="fa-solid fa-bars hamburger-icon"> </i>
         </a>
         <div class="header-right">
