fix cascading css

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
       <nav class="header-nav">
         <!-- logo -->
         <div class="header-left">
-          <img src="./img/LOGOpng.png" class="nav-logo" />
+          <img src="./img/LOGOpng.png" class="header-nav-logo" />
         </div>
         <!-- nav links -->
         <!-- HAMBURGER: -->
-        <a class="icon" onclick="openHamburger()">
-          <i class="fa-solid fa-bars hamburger-icon"> </i>
+        <a class="hamburger-icon" onclick="openHamburger()">
+          <i class="fa-solid fa-bars"> </i>
         </a>
         <div class="header-right">
           <ul class="nav-list">
@@ -78,65 +78,61 @@
       </div>
     </header>
     <main class="main-container">
-      <div class="main-article">
-        <div class="main-article-body">
-          <div class="main-article-item item1">
-            <a href="#" class="main-article-link">
-              <img
-                src="./img/articles/article-1.png"
-                alt="Placeholder article image."
-                class="main-article-image"
-              />
-            </a>
-          </div>
-          <div class="main-article-item item2">
-            <a href="#" class="main-article-link">
-              <img
-                src="./img/articles/article-2.jpg"
-                alt="Placeholder article image."
-                class="main-article-image"
-              />
-            </a>
-          </div>
-          <div class="main-article-item item3">
-            <a href="#" class="main-article-link">
-              <img
-                src="./img/articles/article-3.jpg"
-                alt="Placeholder article image."
-                class="main-article-image"
-              />
-            </a>
-          </div>
+      <div class="main-article-body">
+        <div class="main-article-item item1">
+          <a href="#" class="main-article-link">
+            <img
+              src="./img/articles/article-1.png"
+              alt="Placeholder article image."
+              class="main-article-image"
+            />
+          </a>
+        </div>
+        <div class="main-article-item item2">
+          <a href="#" class="main-article-link">
+            <img
+              src="./img/articles/article-2.jpg"
+              alt="Placeholder article image."
+              class="main-article-image"
+            />
+          </a>
+        </div>
+        <div class="main-article-item item3">
+          <a href="#" class="main-article-link">
+            <img
+              src="./img/articles/article-3.jpg"
+              alt="Placeholder article image."
+              class="main-article-image"
+            />
+          </a>
+        </div>
 
-          <div class="main-article-item item4">
-            <a href="#" class="main-article-link">
-              <img
-                src="./img/articles/article-4.png"
-                alt="Placeholder article image."
-                class="main-article-image"
-              />
-            </a>
-          </div>
-          <div class="main-article-item item5">
-            <a href="#" class="main-article-link">
-              <img
-                src="./img/articles/article-5.png"
-                alt="Placeholder article image."
-                class="main-article-image"
-              />
-            </a>
-          </div>
+        <div class="main-article-item item4">
+          <a href="#" class="main-article-link">
+            <img
+              src="./img/articles/article-4.png"
+              alt="Placeholder article image."
+              class="main-article-image"
+            />
+          </a>
+        </div>
+        <div class="main-article-item item5">
+          <a href="#" class="main-article-link">
+            <img
+              src="./img/articles/article-5.png"
+              alt="Placeholder article image."
+              class="main-article-image"
+            />
+          </a>
         </div>
       </div>
       <div class="button-container">
         <button class="button news-button">VIEW ALL NEWS</button>
       </div>
-      <div class="bottom-article">
+      <div class="positions-article">
         <div class="hero-text-container">
-          <h1 class="header-text-main positions-heading text-shadow">
-            LOVE WHERE<br />YOU WORK
-          </h1>
-          <p class="header-text-small positions-text text-shadow">
+          <h1 class="header-text-main text-shadow">LOVE WHERE<br />YOU WORK</h1>
+          <p class="header-text-small"text-shadow">
             WE'VE GOT A PLACE FOR YOU
           </p>
         </div>
